<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="widget_name">Now playing</string>
  <string name="widget_description">What Resonus is playing, with play, pause and skip.</string>
  <string name="widget_idle">Tap to open Resonus</string>
  <string name="tile_label">Resonus</string>
  <string name="widget_previous">Previous</string>
  <string name="widget_play_pause">Play or pause</string>
  <string name="widget_next">Next</string>
  <string name="widget_square_name">Now playing (cover)</string>
</resources>
